--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "firebase": "^8.7.1",
+    "firebase-admin": "^9.11.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
